// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Page information > Default > renders correctly 1`] = `
<jest>
  <div
    class="ecl-page-info"
  />
</jest>
`;

exports[`Page information > Default > renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-page-info"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  />
</jest>
`;

exports[`Page information > Default > renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-page-info custom-class custom-class--test"
  />
</jest>
`;
